fix swagger for GET /last-update-timestamps
